# adafruit-feather-esp32c6-discovery

./: Cargo.toml  LICENSE  README.md  build.rs
.cargo/: config.toml
.github/workflows/: rust_ci.yml
.skills/definition-of-done/: SKILL.md
docs/superpowers/specs/: 2026-04-12-enviro-examples-fix-design.md
examples/: adafruit_feather_sh1107.rs  adafruit_feather_sh1107_text.rs  bme280_i2c.rs  bme280_ssd1306_i2c.rs  dht11.rs  enviro_all.rs  enviro_bme280_i2c.rs  enviro_display_spi.rs  enviro_ltr559_i2c.rs  enviro_mics6814.rs  enviro_pms5003.rs  enviro_st7735r_spi.rs  gc9a01_spi.rs  gc9a01_spi_text.rs  i2c_scan.rs  ili9341_spi.rs  ili9341_spi_text.rs  max7219_8x8_matrix.rs  modulino_buttons_i2c.rs  modulino_buzzer_i2c.rs  modulino_distance_i2c.rs  modulino_hub_multi_oled.rs  modulino_joystick_i2c.rs  modulino_knob_i2c.rs  modulino_latch_relay_i2c.rs  modulino_led_matrix_i2c.rs  modulino_light_i2c.rs  modulino_movement_i2c.rs  modulino_pixels_i2c.rs  modulino_thermo_i2c.rs  modulino_vibro_i2c.rs  newxie_thermometer.rs  ssd1306_i2c.rs  ssd1306_i2c_text.rs  sths34pf80_full.rs  sths34pf80_i2c.rs  ttp223_basic.rs  ttp223_touch.rs  zermatt_snow.rs
src/: main.rs
