[package]
edition      = "2024"
name         = "adafruit-feather-esp32c6-discovery"
rust-version = "1.88"
version      = "0.1.0"

[dependencies]
esp-hal = { version = "1.0.0", features = ["esp32c6", "defmt", "unstable"] }
panic-rtt-target = { version = "0.2.0", features = ["defmt"] }
rtt-target = { version = "0.6.2", features = ["defmt"] }
defmt = "1.0.1"
smart-leds = "0.4.0"
esp-hal-smartled = { git = "https://github.com/esp-rs/esp-hal-community", features = ["esp32c6"] }
embedded-hal = "1.0.0"

esp-bootloader-esp-idf = { version = "0.4.0", features = ["esp32c6"] }
critical-section = "1.2.0"

[profile.dev]
# Rust debug is too slow.
# For debug builds always builds with some optimization
opt-level = "s"

[profile.release]
codegen-units    = 1     # LLVM can perform better optimizations using a single thread
debug            = 2
debug-assertions = false
incremental      = false
lto              = 'fat'
opt-level        = 's'
overflow-checks  = false

[dev-dependencies]
bme280 = "0.5.1"
display-interface = "0.5.0"
display-interface-spi = "0.5.0"
embedded-graphics = "0.8.2"
embedded-hal-bus = "0.3.0"
heapless = "0.9.2"
mipidsi = "0.8.0"
ssd1306 = "0.10.0"
tinybmp = "0.6.0"
libm = "0.2.11"
sgp30 = "0.3.2"
# modulino = "0.1.0"
modulino = { git = "https://github.com/melastmohican/modulino-rs.git", branch = "main", features = ["defmt"] }
sths34pf80 = "0.1.1"
pmsx003 = "1.0.0"
